<resources>
    <string name="app_name">PaintingRecognition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  AUTHENTICATION PAGE  -->
    <string name="login">I am not registered yet.</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="enter_email">Enter your e-mail:</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password:</string>

    <!--  NAVIGATION MENU  -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>

    <!--  HOME FRAGMENT  -->
    <string name="carousel_title">Your last 5 scans:</string>
    <string name="metadata_genre">Genre:</string>
    <string name="metadata_accuracy">Accuracy:</string>
    <string name="metadata_path">Path:</string>
    <string name="app_description">Use camera to capture paintings and our application will recognize it and give detailed informations about it.</string>
    <string name="fallback_no_scan">No scans are available.</string>
    <string name="fallback_start_scan">Click here to start scanning.</string>

    <!--  SCAN FRAGMENT ALERT DIALOG  -->
    <string name="rotation_alert_title">Bad alignment!</string>
    <string name="rotation_alert_message">Please hold phone in Portrait Mode! \nTurn phone in position and press "OK"</string>
    <string name="rotation_alert_positive_button_text">OK</string>
    <string name="rotation_alert_negative_button_text">Close page</string>

    <!--  PROFILE PAGE  -->
    <string name="profile_title_text">You have %d scanned images.</string>

</resources>