<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeBackgroundColor"
    tools:context=".views.auth.fragments.LoginFragment">

    <TextView
        android:id="@+id/loginWelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_top_margin"
        android:text="Login"
        android:textColor="@color/customColor"
        android:textSize="@dimen/text_36_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/switch_text_margin"
        android:layout_marginTop="@dimen/switch_text_margin_top"
        android:text="@string/login"
        android:textSize="@dimen/text_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginWelcomeMessage" />

    <TextView
        android:id="@+id/loginSigninText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/switch_text_margin_top"
        android:layout_marginEnd="@dimen/switch_text_margin"
        android:text="@string/signin"
        android:textSize="@dimen/text_24_sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginWelcomeMessage" />

    <EditText
        android:id="@+id/loginEmailEditText"
        android:layout_width="@dimen/login_email_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/email_edit_text_top_margin"
        android:hint="@string/email"
        android:text="deak.a.adrienn@student.ms.sapientia.ro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSigninText" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="@dimen/login_email_edit_text_width"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/eye_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="123456"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailEditText"
        app:passwordToggleEnabled="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginSubmitButton"
        android:layout_width="@dimen/login_submit_button_width"
        android:layout_height="@dimen/login_submit_button_height"
        android:layout_marginTop="@dimen/email_edit_text_top_margin"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>